	PR debug/45055 	PR rtl-optimization/45137 	* rtl.h (prev_nonnote_nondebug_insn, next_nonnote_nondebug_insn): New 	prototypes. 	* emit-rtl.c (prev_nonnote_nondebug_insn, next_nonnote_nondebug_insn): 	New functions. 	* combine.c (next_nonnote_nondebug_insn): Removed. 	* ifcvt.c (noce_process_if_block): Use prev_nonnote_nondebug_insn. 	* haifa-sched.c (queue_to_ready): Use next_nonnote_nondebug_insn. 	* sched-deps.c (sched_analyze_insn): Likewise. 	(fixup_sched_groups, deps_start_bb): Use prev_nonnote_nondebug_insn. 	* rtlanal.c (canonicalize_condition): Likewise. 	* postreload.c (reload_combine_recognize_pattern): Likewise. 	(reload_cse_move2add): Use next_nonnote_nondebug_insn.

* gcc.dg/pr45055.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@162714 138bc75d-0d04-0410-961f-82ee72b054a4